# API_SERVER/service/AnnounceService.js
@@ -36,3 +36,38 @@ exports.findAnnounce = function(id) {
       } );
   });
 }
+
+exports.createAnnounce = function(body) {
+  return new Promise(async function(resolve, reject) {
+    try {
+      const newAnnounce = new Announce(body);
+      await newAnnounce.save();
+      resolve();
+    } catch (error) {
+      reject( error )
+    }
+  });
+}
+
+exports.updateAnnounce = function(body, id) {
+  return new Promise(async function(resolve, reject) {
+    try {
+      const filter = { _id: id };
+      await Announce.findOneAndUpdate(filter, body);
+      resolve();
+    } catch (error) {
+      reject(error);
+    }
+  });
+}
+
+exports.deleteAnnounce = function(id) {
+  return new Promise(async function(resolve, reject) {
+    try {
+      let announce = await Announce.findOneAndDelete({_id: id});
+      resolve(announce);
+    } catch( error ) {
+      reject(error);
+    }
+  });
+}
